Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Core ReactOS
CORE-8162
Fix a copypasta bug , dwAttrTo was intended
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
Major
Fix Version/s:
0.3.17
Component/s:
Win32SS
Labels:
PATCH
Description
A copypasta bug has been slipped using dwAttrFrom instead dwAttrTo
Attachments
Attachments
Options
Sort By Name
Sort By Date
Ascending
Descending
Thumbnails
List
Download All
path.c.patch
2014-05-02 17:15
0.5 kB
vicmarcal
0004-shlwapi-Check-correct-attributes-in-PathRelativePath.patch
2014-05-02 17:42
0.8 kB
ThFabba
Activity
People
Assignee:
ThFabba
Reporter:
vicmarcal
Votes:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
2014-05-02 17:15
Updated:
2014-11-04 17:26
Resolved:
2014-05-08 12:44