[SHLWAPI] - Fix copypasta in PathRelativePathToW. Patch by Víctor Martínez CORE-8162 #resolve

svn path=/trunk/; revision=63185